--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,7 @@ material-version = "1.12.0"
 coordinatorlayout = "1.2.0"
 drawerlayout = "1.2.0"
 coordinatorlayout-version = "1.3.0"
+gson = "2.10.1"
 
 [libraries]
 # UI base
@@ -42,6 +43,7 @@ google-material = { group = "com.google.android.material", name = "material", ve
 coordinatorlayout = { group = "androidx.coordinatorlayout", name = "coordinatorlayout", version.ref = "coordinatorlayout" }
 drawerlayout = { group = "androidx.drawerlayout", name = "drawerlayout", version.ref = "drawerlayout" }
 androidx-coordinatorlayout = { group = "androidx.coordinatorlayout", name = "coordinatorlayout", version.ref = "coordinatorlayout-version" }
+gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson" }
 
 
 [plugins]
